[direnv] set tmux window name for the project

--- a/.envrc
+++ b/.envrc
@@ -6,3 +6,12 @@ export MAKEFLAGS="-j8"
 if grep -q Microsoft /proc/version; then
   export GDK_DPI_SCALE=2
 fi
+
+tmux_set_window_name() {
+    local window_name=$1
+    if [ -n "$TMUX" ]; then
+        tmux rename-window "$window_name"
+    fi
+}
+
+tmux_set_window_name "ice"
