[makefile][tb] skip slow tb during routine testing

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -38,7 +38,7 @@ TB_LIB_SRC = $(filter-out test/%_tb.v, $(wildcard $(TEST_DIR)/*.v))
 ALL_SRC = $(SRC) $(TB_LIB_SRC)
 
 # Compiler and simulator
-IVERILOG := iverilog -Wall -Wno-timescale -DSIMULATOR
+IVERILOG := iverilog -Wall -Wno-timescale -DSIMULATOR -DTB_EXCLUDE_SLOW
 VVP := vvp
 
 # Linter
