[fmt] add verible config to env and reformat src

--- a/.envrc
+++ b/.envrc
@@ -15,3 +15,22 @@ tmux_set_window_name() {
 }
 
 tmux_set_window_name "ice"
+
+export FLAGS_indentation_spaces=2
+export FLAGS_column_limit=80
+export FLAGS_wrap_spaces=4
+export FLAGS_try_wrap_long_lines=true
+export FLAGS_assignment_statement_alignment=align
+export FLAGS_case_items_alignment=align
+export FLAGS_class_member_variable_alignment=align
+export FLAGS_distribution_items_alignment=align
+export FLAGS_enum_assignment_statement_alignment=align
+export FLAGS_formal_parameters_alignment=align
+export FLAGS_formal_parameters_indentation=wrap
+export FLAGS_module_net_variable_alignment=align
+export FLAGS_named_parameter_alignment=align
+export FLAGS_named_port_alignment=align
+export FLAGS_port_declarations_alignment=align
+export FLAGS_port_declarations_indentation=wrap
+export FLAGS_struct_union_members_alignment=align
+export FLAGS_wrap_end_else_clauses=false
