[sram] introduce and use SB_IO for sram io
This is to get more explicit control over the timing of the
signals on the pads. The data and oe_n were not meeting the
setup and hold times in the previous version, despite seeming
to in simulation.

It is possible that this was because there was no explicit
relationship between those signals that the synthesis tools
could detect, and maybe this could have been handled in some
other way.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -38,11 +38,11 @@ TB_LIB_SRC = $(filter-out test/%_tb.v, $(wildcard $(TEST_DIR)/*.v))
 ALL_SRC = $(SRC) $(TB_LIB_SRC)
 
 # Compiler and simulator
-IVERILOG := iverilog -Wall -Wno-timescale -DSIMULATOR -DTB_EXCLUDE_SLOW
+IVERILOG := iverilog -Wall -Wno-portbind -Wno-timescale -DSIMULATOR -DTB_EXCLUDE_SLOW
 VVP := vvp
 
 # Linter
-LINTER := verilator --lint-only --quiet -Wall --timing --Wno-WIDTHEXPAND --Wno-WIDTHTRUNC
+LINTER := verilator -DLINTING=1 --lint-only --quiet -Wall --timing --Wno-WIDTHEXPAND --Wno-WIDTHTRUNC
 
 # Formatter
 #
