[vga] add 800x600 mode and bad 1024 note
The adc vga demo does not meet timing at 800x600 with nextpnr.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -7,7 +7,11 @@ DEVICE := hx8k
 PACKAGE := ct256
 
 VGA_MODE := "640_480_60"
-# VGA_MODE := "1024_768_60"
+# VGA_MODE := "800_600_60"
+
+# VGA_MODE 1024_768 is won't currently work because the pixel clock is too fast
+# for the sram.
+#VGA_MODE := "1024_768_60"
 
 # Clock Frequency in MHZ
 CLK_FREQ := 100
