--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,6 +6,9 @@
 DEVICE := hx8k
 PACKAGE := ct256
 
+# nextpnr can't manage to place and route the 800x600 and make timing.
+# use icecube2 instead :( Running tb's at higher resolutions is fine,
+# just not real bitstream generation.
 VGA_MODE := "640_480_60"
 # VGA_MODE := "800_600_60"
 
@@ -45,11 +48,11 @@ TB_LIB_SRC = $(filter-out test/%_tb.v, $(wildcard $(TEST_DIR)/*.v))
 ALL_SRC = $(SRC) $(TB_LIB_SRC)
 
 # Compiler and simulator
-IVERILOG := iverilog -Wall -Wno-portbind -Wno-timescale -DVGA_MODE_$(VGA_MODE) -DSIMULATOR -DTB_EXCLUDE_SLOW
+IVERILOG := iverilog -Wall -Wno-portbind -Wno-timescale -DSYNTH_YOSYS -DVGA_MODE_$(VGA_MODE) -DSIMULATOR -DTB_EXCLUDE_SLOW
 VVP := vvp
 
 # Linter
-LINTER := verilator -DLINTING=1 -DVGA_MODE_$(VGA_MODE) --lint-only --quiet -Wall --timing --Wno-WIDTHEXPAND --Wno-WIDTHTRUNC
+LINTER := verilator -DLINTING=1 -DSYNTH_YOSYS -DVGA_MODE_$(VGA_MODE) --lint-only --quiet -Wall --timing --Wno-WIDTHEXPAND --Wno-WIDTHTRUNC
 
 # Formatter
 #
@@ -100,7 +103,7 @@ endef
 
 define synth_rule
 $(BUILD_DIR)/$(notdir $(basename $(1))).json: $(1) Makefile | $(BUILD_DIR)
-	$(YOSYS) -DVGA_MODE_$(VGA_MODE) -E $(BUILD_DIR)/$(notdir $(basename $(1))).dep -p '$(call YOSYS_CMD,$(1))'
+	$(YOSYS) -DSYNTH_YOSYS -DVGA_MODE_$(VGA_MODE) -E $(BUILD_DIR)/$(notdir $(basename $(1))).dep -p '$(call YOSYS_CMD,$(1))'
 	cat $(BUILD_DIR)/$(notdir $(basename $(1))).dep | tr ' ' '\n' | grep -v '^/' | tr '\n' ' ' | awk '{$$$$1=$$$$1":"; print}' > $(BUILD_DIR)/$(notdir $(basename $(1))).d
 endef
 
