[sv] replace wire/reg with logic

--- a/lattice_proj/adc_xy_vga/adc_xy_vga_sbt.project
+++ b/lattice_proj/adc_xy_vga/adc_xy_vga_sbt.project
@@ -19,9 +19,9 @@ DevicePower=
 NetlistFile=adc_xy_vga_Implmnt/adc_xy_vga.edf
 AdditionalEDIFFile=
 IPEDIFFile=
-DesignLib=
-DesignView=
-DesignCell=
+DesignLib=adc_xy_vga_Implmnt/sbt/netlist/oadb-adc_xy_vga_top
+DesignView=_rt
+DesignCell=adc_xy_vga_top
 SynthesisSDCFile=adc_xy_vga_Implmnt/adc_xy_vga.scf
 UserPinConstraintFile=
 UserSDCFile=../../constraints/vanilla-ice40-clock.sdc
