--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -23,6 +23,7 @@ CLK_FREQ := 100
 # work with icecube2. nextprn just can't always (or ever) do
 # place and route that meets timing, but icecube2 can.
 # TOP_IGNORE := adc/adc_xy_vga_top.sv
+TOP_IGNORE := gfx/gfx_demo_dbuf_top.sv
 
 # Directories
 TEST_DIR := test
