[env] set gtk theme to dark
gtkwave was burning my eyes. This also needs --dark on the command line,
otherwise, the 'Signals' section remains white. I couldn't figure out
how to get direnv to pass an alias or function to the env, so I made an
alias in my main nix-config instead.

--- a/.envrc
+++ b/.envrc
@@ -2,7 +2,7 @@ use flake
 
 export PATH=$(pwd)/scripts:$PATH
 
-export GTK_THEME="Adwaita"
+export GTK_THEME="Adwaita:dark"
 export MAKEFLAGS="-j8"
 
 if grep -q Microsoft /proc/version; then
