[sram_tester] use skidbuffer

--- a/rtl/Makefile
+++ b/rtl/Makefile
@@ -16,7 +16,7 @@ CLK_FREQ := 100
 # these are files that we can't build with yosys/nextpnr and only
 # work with icecube2. nextprn just can't always (or ever) do
 # place and route that meets timing, but icecube2 can.
-TOP_IGNORE := sram_test/sram_tester_axi_top.sv tlight/tlight_top.sv adc/adc_xy_vga_fade_stripe_top.sv
+TOP_IGNORE := tlight/tlight_top.sv adc/adc_xy_vga_fade_stripe_top.sv
 
 # Directories
 TEST_DIR := test
